docs: swagger fixes
